--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
       <section class="seccion_1" id="inicio">
         <div class="languages">
           
-          <button class="lang-button" data-language="es">🇪🇸</button>
-          <button class="lang-button" data-language="en">🇬🇧</button>
+          <button class="lang-button" data-language="es">ES</button>
+          <button class="lang-button" data-language="en">EN</button>
 
         </div>
         <h1 class="seccion_1_encabezado" >Facundo Moure</h1>
@@ -68,29 +68,29 @@
         <div class="envoltura_proyectos">
           <div class="proyecto">
             <div class="texto_proyecto">
-              <h2 class="nombre_proyecto">Videojuego <br> G.V.Kangú</h2>
-              <h4 class="tecnologias_proyecto">Programación - Godot</h4>
+              <h2 class="nombre_proyecto" data-section="projects" data-value="videogames">Videojuego</h2>
+              <h4 class="tecnologias_proyecto">Godot</h4>
             </div>
             <img src="img/proyecto_1.jpg" alt="" class="imagen_proyecto" />
-            <a href="https://www.youtube.com/watch?v=4T0ylr6nU2E" class="link_proyecto"target="_blank">Ver Video...</a>
+            <a href="https://www.youtube.com/watch?v=4T0ylr6nU2E" class="link_proyecto"target="_blank" data-section="projects" data-value="video">Ver Video...</a>
           </div>
 
           <div class="proyecto">
             <div class="texto_proyecto">
-              <h2 class="nombre_proyecto">Videojuego <br> Space Dementia</h2>
-              <h4 class="tecnologias_proyecto">Programación - Godot</h4>
+              <h2 class="nombre_proyecto" data-section="projects" data-value="videogames">Videojuego</h2>
+              <h4 class="tecnologias_proyecto">Godot</h4>
             </div>
             <img src="img/proyecto_2.jpg" alt="" class="imagen_proyecto" />
-            <a href="https://www.youtube.com/watch?v=wRc6CJHpR8c" class="link_proyecto" target="_blank">Ver Video...</a>
+            <a href="https://www.youtube.com/watch?v=wRc6CJHpR8c" class="link_proyecto" target="_blank" data-section="projects" data-value="video">Ver Video...</a>
           </div>
 
           <div class="proyecto">
             <div class="texto_proyecto">
-              <h2 class="nombre_proyecto">Videojuego <br> Latidos del Abismo</h2>
-              <h4 class="tecnologias_proyecto">Programación - Godot</h4>
+              <h2 class="nombre_proyecto" data-section="projects" data-value="videogames">Videojuego</h2>
+              <h4 class="tecnologias_proyecto">Godot</h4>
             </div>
             <img src="img/proyecto_3.jpg" alt="" class="imagen_proyecto" />
-            <a href="https://www.youtube.com/watch?v=j6IS_kIgiC4&t=147s" class="link_proyecto" target="_blank">Ver Video...</a>
+            <a href="https://www.youtube.com/watch?v=j6IS_kIgiC4&t=147s" class="link_proyecto" target="_blank" data-section="projects" data-value="video">Ver Video...</a>
           </div>
           <div class="musica">
             <h2 class="seccion_3_subtitulo" data-section="projects" data-value="music">Composición Musical para Videojuegos</h2>
@@ -98,29 +98,29 @@
 
           <div class="proyecto">
             <div class="texto_proyecto">
-              <h2 class="nombre_proyecto">Videojuego <br> Serpent Strider</h2>
-              <h4 class="tecnologias_proyecto">Composición Musical - Ableton Live</h4>
+              <h2 class="nombre_proyecto" data-section="projects" data-value="videogames">Videojuego</h2>
+              <h4 class="tecnologias_proyecto">Cubase - Ableton Live</h4>
             </div>
             <img src="img/proyecto_4.jpg" alt="" class="imagen_proyecto" />
-            <a href="https://www.youtube.com/watch?v=5NT17_7pi2c" class="link_proyecto" target="_blank">Ver Video...</a>
+            <a href="https://www.youtube.com/watch?v=5NT17_7pi2c" class="link_proyecto" target="_blank" data-section="projects" data-value="video">Ver Video...</a>
           </div>
 
           <div class="proyecto">
             <div class="texto_proyecto">
-              <h2 class="nombre_proyecto">Videojuego <br> Bay of Chtulhu</h2>
-              <h4 class="tecnologias_proyecto">Composición Musical - Ableton Live</h4>
+              <h2 class="nombre_proyecto" data-section="projects" data-value="videogames">Videojuego</h2>
+              <h4 class="tecnologias_proyecto">Cubase - Ableton Live</h4>
             </div>
             <img src="img/proyecto_5.jpg" alt="" class="imagen_proyecto" />
-            <a href="https://www.youtube.com/watch?v=hPLXVO9WsuM" class="link_proyecto" target="_blank">Ver Video...</a>
+            <a href="https://www.youtube.com/watch?v=hPLXVO9WsuM" class="link_proyecto" target="_blank" data-section="projects" data-value="video">Ver Video...</a>
           </div>
 
           <div class="proyecto">
             <div class="texto_proyecto">
-              <h2 class="nombre_proyecto">Videojuego<br>16/12</h2>
-              <h4 class="tecnologias_proyecto">Composición Musical - Ableton Live</h4>
+              <h2 class="nombre_proyecto" data-section="projects" data-value="videogames">Videojuego</h2>
+              <h4 class="tecnologias_proyecto">Cubase - Ableton Live</h4>
             </div>
             <img src="img/proyecto_6.jpg" alt="" class="imagen_proyecto" />
-            <a href="https://www.youtube.com/watch?v=j6IS_kIgiC4&t=147s" class="link_proyecto"target="_blank">Ver Video...</a>
+            <a href="https://www.youtube.com/watch?v=j6IS_kIgiC4&t=147s" class="link_proyecto"target="_blank" data-section="projects" data-value="video">Ver Video...</a>
           </div>
         </div>
 
@@ -131,29 +131,29 @@
         <div class="envoltura_proyectos">  
           <div class="proyecto">
             <div class="texto_proyecto">
-              <h2 class="nombre_proyecto">Pagina Web <br> Imprensiones 3D</h2>
+              <h2 class="nombre_proyecto" data-section="projects" data-value="webpage">Página Web</h2>
               <h4 class="tecnologias_proyecto">HTML - CSS</h4>
             </div>
             <img src="img/proyecto_7.jpg" alt="" class="imagen_proyecto" />
-            <a href="https://facundomoure.github.io/Entrega-FinalCoder/index.html" class="link_proyecto" target="_blank">Ver Página...</a>
+            <a href="https://facundomoure.github.io/Entrega-FinalCoder/index.html" class="link_proyecto" target="_blank" data-section="projects" data-value="page">Visitar Página...</a>
           </div>
 
           <div class="proyecto">
             <div class="texto_proyecto">
-              <h2 class="nombre_proyecto">Pagina Web <br> ML Luthier</h2>
+              <h2 class="nombre_proyecto" data-section="projects" data-value="webpage">Página Web</h2>
               <h4 class="tecnologias_proyecto">HTML - CSS - JavaScript</h4>
             </div>
             <img src="img/proyecto_8.jpg" alt="" class="imagen_proyecto" />
-            <a href="https://facundomoure.github.io/JavaScript-Proyecto-Final-Coderhouse/" class="link_proyecto" target="_blank">Ver Página...</a>
+            <a href="https://facundomoure.github.io/JavaScript-Proyecto-Final-Coderhouse/" class="link_proyecto" target="_blank" data-section="projects" data-value="page">Visitar Página...</a>
           </div>
 
           <div class="proyecto">
             <div class="texto_proyecto">
-              <h2 class="nombre_proyecto">Página Web<br>Portfolio</h2>
+              <h2 class="nombre_proyecto" data-section="projects" data-value="webpage">Página Web</h2>
               <h4 class="tecnologias_proyecto">HTML - CSS - JavaScript</h4>
             </div>
             <img src="img/proyecto_9.jpg" alt="" class="imagen_proyecto" />
-            <a href="https://facundomoure.github.io/Portfolio/" class="link_proyecto"target="_blank">Ver Página...</a>
+            <a href="https://facundomoure.github.io/Portfolio/" class="link_proyecto"target="_blank" data-section="projects" data-value="page">Visitar Página...</a>
           </div>
         </div>
       </section>
