Imagenes y texto actualizados

--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
       <section class="seccion_1" id="inicio">
         <div class="languages">
           
-          <button class="lang-button" data-language="es">ES</button>
-          <button class="lang-button" data-language="en">EN</button>
+          <button class="lang-button" data-language="es">Español</button>
+          <button class="lang-button" data-language="en">English</button>
 
         </div>
         <h1 class="seccion_1_encabezado" >Facundo Moure</h1>
@@ -125,13 +125,13 @@
         </div>
 
           <div class="musica">
-            <h2 class="seccion_3_subtitulo" data-section="projects" data-value="websites">Desarrollo de Paginas Web</h2>
+            <h2 class="seccion_3_subtitulo" data-section="projects" data-value="websites">Desarrollo de Páginas Web</h2>
           </div>
 
         <div class="envoltura_proyectos">  
           <div class="proyecto">
             <div class="texto_proyecto">
-              <h2 class="nombre_proyecto" data-section="projects" data-value="webpage">Página Web</h2>
+              <h2 class="nombre_proyecto" data-section="projects" data-value="webpage">E-Commerce</h2>
               <h4 class="tecnologias_proyecto">HTML - CSS</h4>
             </div>
             <img src="img/proyecto_7.jpg" alt="" class="imagen_proyecto" />
@@ -140,7 +140,7 @@
 
           <div class="proyecto">
             <div class="texto_proyecto">
-              <h2 class="nombre_proyecto" data-section="projects" data-value="webpage">Página Web</h2>
+              <h2 class="nombre_proyecto" data-section="projects" data-value="webpage">E-Commerce</h2>
               <h4 class="tecnologias_proyecto">HTML - CSS - JavaScript</h4>
             </div>
             <img src="img/proyecto_8.jpg" alt="" class="imagen_proyecto" />
@@ -149,7 +149,7 @@
 
           <div class="proyecto">
             <div class="texto_proyecto">
-              <h2 class="nombre_proyecto" data-section="projects" data-value="webpage">Página Web</h2>
+              <h2 class="nombre_proyecto" data-section="projects" data-value="webpage">Portfolio</h2>
               <h4 class="tecnologias_proyecto">HTML - CSS - JavaScript</h4>
             </div>
             <img src="img/proyecto_9.jpg" alt="" class="imagen_proyecto" />
