--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
 
           <div class="proyecto">
             <div class="texto_proyecto">
-              <h2 class="nombre_proyecto" data-section="projects" data-value="webpage">Portfolio</h2>
+              <h2 class="nombre_proyecto" data-section="projects" data-value="portfolio">Portfolio</h2>
               <h4 class="tecnologias_proyecto">HTML - CSS - JavaScript</h4>
             </div>
             <img src="img/proyecto_9.jpg" alt="" class="imagen_proyecto" />
